<resources>
    <string name="app_name">Jogjaraya.id</string>
    <string name="info">Info</string>
    <string name="ensiklo">Ensiklo</string>
    <string name="agenda">Agenda</string>
    <string name="jelajah">Jelajah</string>
    <string name="beranda">Beranda</string>

    <string name="app_version">Versi</string>
    <string name="image_of">%1$d of %2$d</string>
    <string name="copyright">Copyright ©</string>

    <!--String title-->
    <string name="title_agenda">AGENDA</string>
    <string name="title_jelajah">JELAJAH</string>
    <string name="title_detail_jelajah">DETAIL JELAJAH</string>
    <string name="title_ensiklopedia">ENSIKLOPEDIA</string>
    <string name="title_detail_artikel">DETAIL ENSIKLOPEDIA</string>
    <string name="title_detail_info">DETAIL INFO</string>
    <string name="versi">v.</string>

</resources>
